tests/baselines/reference/defaultValueInFunctionOverload1.errors.txt
tests/cases/compiler/defaultValueInFunctionOverload1.ts(1,14): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.


==== tests/cases/compiler/defaultValueInFunctionOverload1.ts (1 errors) ====
    function foo(x: string = '');
                 ~~~~~~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    function foo(x = '') { }